--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "webpack.config.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
+    "dev:webpack": "webpack-dev-server --mode development",
+    "dev": "netlify dev",
     "build": "webpack --mode production"
   },
   "keywords": [],
@@ -24,12 +25,14 @@
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^6.3.0",
+    "dotenv": "^10.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^7.18.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
+    "netlify-cli": "^6.10.2",
     "postcss": "^8.3.8",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.1",
@@ -42,6 +45,7 @@
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "vue": "^3.2.19",
     "vue-router": "^4.0.11",
     "vuex": "^4.0.2"
